feat(user): 拦截高频注册
